[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/spritesheets/boomerang_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/weapons/Boomerang.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 22.0
} ]

[node name="Boomerang" type="Node2D" groups=[
"treadmill",
]]
position = Vector2( 0, -6 )
script = ExtResource( 2 )

[node name="BoomerangBody" type="Area2D" parent="."]
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoomerangBody"]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="BoomerangBody"]
frames = SubResource( 10 )
frame = 6
playing = true

[node name="ExpiryTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Sprite" type="Sprite" parent="."]

[connection signal="body_entered" from="BoomerangBody" to="." method="_on_BoomerangBody_body_entered"]
[connection signal="timeout" from="ExpiryTimer" to="." method="_on_ExpiryTimer_timeout"]
